added success function

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,600&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="styles.css">
   <script src="https://use.fontawesome.com/8877301646.js"></script>
+  <script src="app.js" defer></script>
   <title>Document</title>
 </head>
 <body>
@@ -45,7 +46,7 @@
           
         </form>
 
-        <button>Submit</button>
+        <button class="btn-register">Submit</button>
       </div>
 
       <div class="farm">
@@ -60,7 +61,7 @@
           
         </form>
 
-        <button>Submit</button>
+        <button class="btn-farm">Submit</button>
       </div>
     </div>
 
@@ -87,4 +88,8 @@
       </div>
     </footer>
 </body>
+
+<script src="https://cdn.jsdelivr.net/gh/mathusummut/confetti.js/confetti.min.js"></script>
+<!-- <script>confetti.start()</script> -->
+
 </html>
