added the call- oracle section

--- a/index.html
+++ b/index.html
@@ -67,6 +67,21 @@
 
         <button class="btn-farm">Submit</button>
       </div>
+
+      <div class="call-oracle">
+        <h6>Call Oracle</h6>
+        <div class="divider"></div>
+        <form class="oracle-form" action="">
+
+          <div class="id-number">
+            <input type="text" placeholder="Oracle ID">
+            <i class="fa fa-pencil-square-o" style="font-size: 1.25rem"></i>
+          </div>
+          
+        </form>
+
+        <button class="btn-farm">Submit</button>
+      </div>
     </div>
 
 <!--=============================================-->
