--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script src="https://use.fontawesome.com/8877301646.js"></script>
   <script src="https://rawgit.com/ethereum/web3.js/0.16.0/dist/web3.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/ethjs@0.3.0/dist/ethjs.min.js"></script>
-  <script language="javascript" type="text/javascript" src="web3.min.js"></script>
+  <!-- <script language="javascript" type="text/javascript" src="web3.min.js"></script> -->
   <script language="javascript" type="text/javascript" src="monkeypaw_abi.js"></script>
   <script src="app.js" defer></script>
   <!-- TITLE -->
@@ -55,7 +55,7 @@
 
       </form>
 
-      <button class="btn-register">Submit</button>
+      <button id="deposit" class="btn-register">Submit</button>
     </div>
 
     <div class="farm">
@@ -157,15 +157,21 @@
         window.sessionStorage.setItem("MiCuenta", address);
       });
 
-      function deposit(owner, repo, pr) {
-        return monkeyPaw.methods.deposit(owner, repo, pr)
-          .send({
+      var depositButton = document.getElementById("deposit");
+
+      depositButton.addEventListener('click', function() {
+        //var value = jQuery("div#editor")[0].innerHTML;
+        // Need to add Owner, repo, pr
+        alert("Works ");
+        miniToken.deposit("420","Dirty","Boss", {
             from: address
           })
-          .on("error", function(error) {
-            console.log("Did not work")
-          });
-      }
+          .then(function(txHash) {
+            console.log('Correct');
+            console.dir(txHash);
+          })
+          .catch(console.error);
+      });
 
     }
 
