--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
       depositButton.addEventListener('click', function() {
         //var value = jQuery("div#editor")[0].innerHTML;
         // Need to add Owner, repo, pr
-        alert("trying");
+        alert("closer");
         miniToken.deposit("420","Dirty","Boss", {
           from: address
         })
@@ -182,13 +182,13 @@
             //data.append(eth.getTransactionReceipt(txReceipt).data);
             //console.log(data);
           } catch (err) {
-
+            indicateFailure(err);
             console.log(err);
           }
         }
         //document.getElementById("etherforart").hidden = true;
         //document.getElementById("etherforartcompra").hidden = false;
-        //indicateSuccess();
+        indicateSuccess();
         console.log("yay");
       }
 
