--- a/index.html
+++ b/index.html
@@ -158,14 +158,14 @@
 
       var depositButton = document.getElementById("deposit");
 
-      depositButton.addEventListener('click', function() {
+      depositButton.addEventListener('click', async function() {
         //var value = jQuery("div#editor")[0].innerHTML;
         // Need to add Owner, repo, pr
         var testABI = web3.eth.contract(monkeyPawABI);
         var tests = testABI.at(monkeyPawAddress);
-        alert("Oh mannnn");
+        alert("async");
 
-        await tests.methods.deposit("centrist", "dude", "420").send({from: address});
+       await tests.methods.deposit("centrist", "dude", "420").send({from: address});
 
 
         // tests.deposit("centrist", "dude", "34")
