--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <script language="javascript" type="text/javascript" src="monkeypaw_abi.js"></script>
   <script src="app.js" defer></script>
   <!-- TITLE -->
-  <title>Document</title>
+  <title> MoneyPaw</title>
 </head>
 
 <body>
